# pinvault

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  diesel.toml
.github/workflows/: build-release-binaries.yml  ci.yml
migrations/2020-03-25-083202_create_files/: down.sql  up.sql
src/: cli.rs  db.rs  download.rs  main.rs  models.rs  schema.patch  schema.rs  sql_types.rs  web.rs
src/web/: filters.rs  handlers.rs  mod.rs
static/: main.css
templates/: _base.html  _file.html  added.html  bookmarklet.js  file.html  index.html
