[package]
name = "pinvault"
version = "0.1.0"
authors = ["Rafael Epplee <raffomania@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2", features = ["rustls"] }
actix-rt = "1"
readability = "0.1"
bytes = "0.5"
url = "1"
ipfs-api = "0.7"
anyhow = "1"